--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,9 @@
+Mon Oct  9 23:58:21 2006  Tim Janik  <timj@gtk.org>
+
+	* birnetutils.cc: fixed typo in condition.
+
+	* birnet-zintern.cc: fixed debugging statement.
+
 Mon Oct  9 23:47:30 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetcdefs.h: ensure we have FALSE, TRUE, ABS, MIN, MAX, CLAMP,
