--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Thu Oct 12 01:50:57 2006  Tim Janik  <timj@gtk.org>
+
+	* bseiirfilter.c: streamlined some comments, fixed includes and 
+	prototypes and constant tables to compile into a test program.
+
 Thu Oct 12 01:44:17 2006  Tim Janik  <timj@gtk.org>
 
 	* bseiirfilter.c: since the ellf program is shipped standalone and as
