--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,8 @@
+Mon Oct 16 23:26:40 2006  Tim Janik  <timj@gtk.org>
+
+	* bsesummation.idl:
+	* bseadder.c: fixed documentation typo.
+
 Wed Sep 27 21:59:47 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bseblockutils.cc: Only optionally produce output during the filter
