--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Tue Oct 17 23:10:43 2006  Tim Janik  <timj@gtk.org>
+
+	* bseellipticfilter.c: cosmetics, fixed constants.
+
 Tue Oct 17 22:03:52 2006  Tim Janik  <timj@imendio.com>
 
 	* bseellipticfilter.h: 
