--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Fri Oct 20 23:03:57 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* gslfilter.c (gsl_filter_sine_scan): Fixed a small bug in block
+	volume computation.
+
 Fri Oct 20 13:58:38 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* gslfilter.[hc] (gsl_filter_sine_scan): Changed the API and
