--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,12 @@
+Sat Oct 21 18:58:35 2006  Tim Janik  <timj@gtk.org>
+
+	* tests/resamplehandle.cc: reworked to split performance tests from
+	ordinary tests. speed up ordinary tests if --test-slow was not
+	specified. fixed test program to use TASSERT() instead of silent exit
+	or return_if_fail on errors.
+
+	* tests/subnormals.cc: refactored a bit, split up performance tests.
+
 Fri Oct 20 23:03:57 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* gslfilter.c (gsl_filter_sine_scan): Fixed a small bug in block
