--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sat Oct 21 20:56:27 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/resamplehandle.cc: Improved comment.
+
 Sat Oct 21 18:58:35 2006  Tim Janik  <timj@gtk.org>
 
 	* tests/resamplehandle.cc: reworked to split performance tests from
