--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Sat Oct 21 22:38:23 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* library/instruments/Makefile.am:
+	* library/instruments/stw-iron-string.bse: Added an example
+	instrument, which sounds like a quite distorted plucked string.
+
+	* tests/bse/Makefile.am: Unbreak make slowcheck from a clean tree: if
+	cxxbinding is only in SLOWTESTS, then noinst_PROGRAMS must contain
+	$(SLOWTESTS), because otherwise cxxbinding will not be built.
+
 Sat Oct 21 17:44:03 2006  Tim Janik  <timj@gtk.org>
 
 	* tests/testwavechunk.c: refactored to sanitize print outs 
